# zephyr

./: .eslintrc.cjs  .gitignore  .prettierrc  AGENTS.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  app-update.yml  claude-standard-loop.sh  forge.config.ts  index.html  launcher.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  ralph-start.sh  requirements.txt  tailwind.config.js  test.sh  tsconfig.json  validate.sh  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts  vitest.config.ts  vitest.integration.config.ts  zephyr.spec
resources/: Info.plist  icon.icns  terminal.html
scripts/: build.sh  download_xterm.sh  generate-icons.js  generate_icns.sh  generate_icon.py  notarize.js
specs/: 01_project_scaffold_tasks.md  02_data_layer_tasks.md  03_docker_service_tasks.md  04_terminal_tasks.md  05_loop_execution_tasks.md  06_credential_tasks.md  07_ui_shell_tasks.md  08_projects_ui_tasks.md  09_loops_ui_tasks.md  10_settings_ui_tasks.md  11_monitoring_tasks.md  12_lifecycle_tasks.md  13_packaging_tasks.md  14_integration_testing_tasks.md  cicd_tasks.md
src/: main.py
tests/: test_app_controller.py  test_app_startup.py  test_asset_injector.py  test_ci_workflow.py  test_cleanup.py  test_config_manager.py  test_credential_dialog.py  test_credential_manager.py  test_disk_checker.py  test_docker_container_ops.py  test_docker_health.py  test_docker_log_streaming.py  test_docker_manager.py  test_docker_terminal.py  test_git_manager.py  test_import_export.py  test_log_bridge.py  test_log_exporter.py  test_log_parser.py  test_main.py  (+23 more)
(+260 files in other folders)
